# sm-datasets

./: .gitignore  .gitmodules  .pbtignore  CHANGELOG.md  pyproject.toml
.github/workflows/: ci.yml
250wt/: CHANGELOG.md
250wt/tables/: 12th_lok_sabha.json  1958_european_athletics_championships_men_s_hammer_throw.json  1967_nfl_afl_draft.json  1968_nfl_afl_draft.json  1969_european_athletics_championships_women_s_pentathlon.json  1972_european_athletics_indoor_championships_men_s_shot_put.json  1975_in_japanese_television.json  1980_pga_championship.json  1992_cricket_world_cup_statistics.json  1992_major_league_baseball_draft.json  1992_u_s_women_s_open_golf_championship.json  1994_95_coventry_city_f_c_season.json  1997_iaaf_world_indoor_championships_men_s_heptathlon.json  1999_afl_draft.json  2000_european_athletics_indoor_championships_men_s_1500_metres.json  2002_03_fa_premier_league.json  2007_european_judo_championships.json  2009_european_team_championships_super_league.json  2009_uci_track_cycling_world_championships_men_s_individual_pursuit.json  2009_world_fencing_championships.json  2011_12_eihl_season.json  2011_12_southeastern_conference_men_s_basketball_season.json  2012_13_bologna_f_c_1909_season.json  2013_14_canberra_united_w_league_season.json  2013_14_frauen_bundesliga.json  2014_korea_national_league.json  2015_open_championship.json  2015_uec_european_track_championships_women_s_scratch.json  (+78 more)
biotables/: CHANGELOG.md
semtab2019_t2dv2/: main.ipynb
semtab2020_round4/: sampled_4k.json
sm_datasets/: datasets.py
soccer_fixed/: version.txt
(+1847 files in other folders)
