[tool.poetry]
name = "sm-datasets"
version = "2.0.4"
description = "Datasets for benchmarking Semantic Modeling problem"
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sem-desc = "^6.11.1"
python-slugify = "^8.0.4"
rdflib = "^7.0.0"
loguru = "^0.7.0"
kgdata = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
